2000-10-27  Alex Samuel  <samuel@codesourcery.com>

	* templates/html: Use Open Publication License.
	* doc/design/qmtest/design.html: Likewise.
	* doc/design/qmtrack/index.xhtml: Likewise.
	* doc/design/qmtrack/architecture.xhtml: Likewise.
	* doc/design/qmtrack/requirements.xhtml: Likewise.
	
2000-10-26  Alex Samuel  <samuel@codesourcery.com>

	* doc/process-xhtml.py: Convert to coding standards.
	* doc/qm.css (div.api): New style.
	* templates/html: Remove emacs variable stuff.
	* templates/py: Add emacs variable stuff.
	
2000-10-25  Alex Samuel  <samuel@codesourcery.com>

	* stanard.mk: Add comments.
	(.PHONY): Fix typo.
	(TOPDIR): New variable.
	(XHTMLPROCESS): Likewise.
	($(SUBDIRS)): Pass TOPDIR to child make processes.
	(%.html): Use XHTML processor script.
	* doc/process-xhtml.py: New script.
	* doc/design/qmtrack/GNUmakefile: Use TOPDIR.
	
	* doc/qm.css: Improve comments.
	
2000-10-25  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk: New file.
	* doc/GNUmakefile: Likewise.
	* doc/qm.css: Likewise.
	* doc/design/qmtrack/GNUmakefile: Likewise.
	* templates/html: Update for XHTML.
	
2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* templates/html (DOCTYPE): Add.

2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* templates/py: New file.

2000-10-24  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmconfig/...: Import.

2000-10-22  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtest/design.html: Import.
	
2000-10-22  Alex Samuel  <samuel@codesourcery.com>

	* doc/design: New directory.
	* doc/design/qmconfig: Likewise.
	* doc/design/qmbuild: Likewise.
	* doc/design/qmtest: Likewise.
	* doc/design/qmtrack: Likewise.
	
2000-10-22  Alex Samuel  <samuel@codesourcery.com>

	* ChangeLog: New file.
	* README.sources: Likewise.
	* COPYING: Likewise.
	
	* templates: New directory.
	* doc: Likewise.