@@ -1,0 +1,56 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+
+  File:   terms.xhtml
+  Author: Alex Samuel
+  Date:   2000-10-29
+
+  Contents:
+    Terminilogy for the qmtrack design.
+
+  Copyright (C) 2000 CodeSourcery LLC.  This material may
+  be distributed only subject to the terms and conditions set forth in
+  the Software Carpentry Open Publication License, which is available at:
+
+    http://www.software-carpentry.com/openpub-license.html
+
+-->
+<html xhtmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+
+    <link rel="stylesheet" type="text/css" href="../../qm.css" />
+
+    <title>qmtrack Terminology</title>
+  </head>
+
+  <body>
+    <ul>
+      <li><a class="TermDef">issue</a>: A record in the qmtrack system
+      is called an issue.  We choose a general and neutral term, since
+      issues may correspond not only to bug reports, but to feature
+      requests, documentation errors, or other, unforseen items.</li>
+
+      <li><a class="TermDef">issue database</a> (<a
+      class="TermDef">idb</a>): An instance of qmtrack stores all
+      issues in a single issue database.</li>
+
+      <li><a class="TermDef">issue id</a> (<a
+      class="TermDef">iid</a>): Each issue is assigned a issue id
+      unique to the issue database.  An issue id is a nonnegative
+      31-bit integer (the nonnegative range of a standard Python
+      integer).</li>
+
+      <li><a class="TermDef">category</a>: Categories are the
+      mechanism by which issues are combined into sets.  Categories
+      are primarily an organizational tool.  Each issue may belong to
+      zero or more categories.  Categories are referred to by short
+      text strings.  The set of categories is enumerated as part of
+      the <a class="Term">idb</a> configuration; an issue may belong
+      to any subset of these categories.</li>
+
+    </ul>
+  </body>
+</html>
